@@ -3,7 +3,7 @@
 
 __revision__ = '$Id$'
 
-# Copyright © 2005-2009 Vasco Nunes, Piotr Ożarowski
+# Copyright © 2005-2010 Vasco Nunes, Piotr Ożarowski
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -24,19 +24,22 @@ __revision__ = '$Id$'
 
 import gettext
 gettext.install('griffith', unicode=1)
+import sys
+import logging
+logging.basicConfig(format='%(asctime)s: %(levelname)s: %(name)s(%(module)s:%(lineno)d): %(message)s', datefmt='%Y-%m-%dT%H:%M:%S')
+log = logging.getLogger('Griffith')
+# print programming warnings in debug mode only (ugly workaround)
+if '--debug' not in sys.argv and '-D' not in sys.argv:
+    import warnings
+    warnings.simplefilter('ignore')
 
 # set the PATH
-import sys, os.path
+import os.path
 lib = os.path.abspath(os.path.join(os.path.dirname(sys.argv[0]), 'lib'))
 #lib = os.path.abspath(os.path.join(os.path.dirname(__file__), 'lib'))
 if os.path.isdir(lib):
     sys.path.insert(1, lib)
 del lib
-
-# logging
-import logging
-logging.basicConfig(format='%(asctime)s: %(levelname)s: %(name)s(%(module)s:%(lineno)d): %(message)s', datefmt='%Y-%m-%dT%H:%M:%S')
-log = logging.getLogger("Griffith")
 
 # check dependencies
 import gutils
